# Connect4Agent

./: .gitignore  Comprehend.md  Exercice1_questions.md  Minimax_agent-analysis.md  annex.md  explore_observation.py  general_presentation.md  minimax_agent_presentation.md  minmax.md  pyproject.toml  random_agent_analysis.md  random_agent_presentation.md  readme.md  smart_agent_analysis.md  smart_agent_presentation.md  strategy.md  test_plan.md  testing_plan.md
src/: annex.md  auxiliary_game_loop_functions.py  enhanced_smart.py  evaluate_pos.py  game_facilities.py  game_loop.py  mcts_agent.py  minimax_agent.py  minmax_agent.py  random_agent.py  smart_agent.py
src/agents/: enhanced_smart.py  random_agent.py  weighted_random.py
src/connect4_agent/: evaluate_pos.py  game_facilities.py  mcts_agent.py  minimax_agent.py  minmax_agent.py  random_agent.py  smart_agent.py
tests/: Annex_code.py  Minimax_vs_random.py  _test_smart_agent.py  smart_vs_random.py  smart_vs_smart.py  test_evaluate_pos.py  test_game_facilities.py  test_game_loop.py  test_install_pettingzoo.py  test_minimax_agent.py  test_random_agent.py  test_smart_agent.py
