[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "connect4_agent"
version = "1.0.0"
authors = [
  { name="Bleuler Alexandre", email="alexandre.bleuler@yahoo.com"}, {name="Fisk Thomas", email="thomas.fisk15@gmail.com"},
]
description = "A package for the Connect4 game of PettingZoo"
readme = "README.md"
requires-python = ">=3.9,<=3.12"
dependencies = ["pettingzoo", "pandas", "loguru", "pygame"]

[project.urls]
Homepage = "https://github.com/tfisk98/Connect4Agent/tree/main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["connect4_agent"]
